[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Page.png" type="Texture" id=1]
[ext_resource path="res://font/Interface_font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://Styles/Menu_boutton.tres" type="StyleBox" id=7]
[ext_resource path="res://Styles/Menu_norm.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
script = ExtResource( 4 )

[node name="Page" type="Sprite" parent="."]
visible = false
position = Vector2( 546, 662 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 124.0
margin_top = 82.0
margin_right = 1023.0
margin_bottom = 604.0
custom_constants/margin_right = 150
custom_constants/margin_top = 100
custom_constants/margin_left = 150
custom_constants/margin_bottom = 100

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 150.0
margin_top = 100.0
margin_right = 749.0
margin_bottom = 422.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="classique" type="Button" parent="MarginContainer/HBoxContainer"]
margin_top = 59.0
margin_right = 599.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Classic game"

[node name="points" type="Button" parent="MarginContainer/HBoxContainer"]
margin_top = 137.0
margin_right = 599.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 8 )
text = "Points game"

[node name="Credit" type="Button" parent="MarginContainer/HBoxContainer"]
margin_top = 215.0
margin_right = 599.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 8 )
text = "Credits"

[node name="Titre" type="Label" parent="."]
margin_left = 125.0
margin_right = 1024.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "HANGMAN"
align = 1

[connection signal="button_up" from="MarginContainer/HBoxContainer/classique" to="." method="_on_classique_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/points" to="." method="_on_points_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Credit" to="." method="_on_Credit_button_up"]
